force-app/main/default/objects/Discount_Setting__mdt/Discount_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Discount Setting</label>
    <pluralLabel>Discount Settings</pluralLabel>
</CustomObject>