force-app/main/default/objects/Discount_Setting__mdt/fields/FieldName__c.field-meta.xml
<CustomField>
    <fullName>FieldName__c</fullName>
    <label>FieldName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>