force-app/main/default/objects/Discount_Setting__mdt/fields/FieldValue__c.field-meta.xml
<CustomField>
    <fullName>FieldValue__c</fullName>
    <label>FieldValue</label>
    <length>40</length>
    <type>Text</type>
</CustomField>