force-app/main/default/objects/Discount_Setting__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Discount_Percentage__c</columns>
    <columns>FieldName__c</columns>
    <columns>FieldValue__c</columns>
    <columns>RecordType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>